--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: #231F20
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: url(DarkNoise.png) repeat;
+  opacity: .7;
 }
 
 code {
