--- a/src/components/plasmic/hub_hub/PlasmicSection.module.css
+++ b/src/components/plasmic/hub_hub/PlasmicSection.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   align-content: unset;
   flex-grow: 1;
-  width: 800px;
+  width: 100%;
   flex-shrink: 0;
   min-width: 500px;
   max-width: 800px;
